# lightstreamer-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  README.tpl  RELEASING.md  deny.toml
.agents/skills/feature-checklist/: SKILL.md
.agents/skills/write-adr/: SKILL.md
.codex/agents/: api-expert.toml  architect.toml  license-auditor.toml  protocol-expert.toml  repo-explorer.toml  transport-expert.toml
.github/workflows/: ci.yml  semver.yml
docs/: README.md  SPEC.md
docs/adr/: 0001-mit-relicensing-clean-room.md  0002-all-three-transports-in-1-0-0.md  0003-typed-event-stream-as-delivery-surface.md  0004-supported-diffs-derived-from-decoders.md  0005-recovery-is-visible-in-the-event-stream.md  0006-empirical-resolution-of-spec-ambiguities.md  0007-transport-port-shape.md
docs/spec/: 01-foundations.md  02-session-lifecycle.md  03-requests.md  04-notifications.md  05-error-codes.md  06-mpn.md
examples/: demo_chat.rs  demo_portfolio.rs  demo_quotes.rs  demo_resilience.rs  ig_stream.rs
examples/simple/: Cargo.toml
src/: error.rs  lib.rs  prelude.rs  test_util.rs
src/client/: builder.rs  client.rs  events.rs  implementation.rs  listener.rs  message.rs  message_listener.rs  mod.rs  model.rs  request.rs  router.rs  subscription.rs  updates.rs  utils.rs
src/config/: address.rs  credentials.rs  mod.rs  options.rs
src/connection/: details.rs  management.rs  mod.rs  options.rs
src/protocol/: diff.rs  escaping.rs  mod.rs  request.rs  response.rs
src/session/: backoff.rs  liveness.rs  mod.rs  options.rs
src/subscription/: item_update.rs  listener.rs  manager.rs  mod.rs  model.rs  update.rs
src/transport/: framing.rs  http.rs  mod.rs  ws.rs
src/utils/: error.rs  logger.rs  mod.rs  proxy.rs  util.rs
tests/: architecture.rs  http_polling_loopback.rs  reconnection_tests.rs
