[package]
name = "lightstreamer-rs"
version = "1.0.0-alpha.1"
edition = "2024"
rust-version = "1.85"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "A Rust client for the Lightstreamer TLCP protocol, for real-time data streaming."
license = "MIT"
repository = "https://github.com/joaquinbejar/lightstreamer-rs"
documentation = "https://docs.rs/lightstreamer-rs"
homepage = "https://github.com/joaquinbejar/lightstreamer-rs"
readme = "README.md"
keywords = ["lightstreamer", "tlcp", "streaming", "realtime", "websocket"]
categories = ["network-programming", "api-bindings"]
exclude = ["/docs", "/rules", "/.claude", "/.github"]

[features]
default = []
# RFC 6902 JSON Patch support for `^P` diff-encoded field values. Off by
# default because it pulls in a JSON stack; see ADR-0004 -- the algorithm is
# advertised to the server via `LS_supported_diffs` only when compiled in.
json-patch = ["dep:serde_json", "dep:json-patch"]

[dependencies]
thiserror = "2.0"
serde_json = { version = "1.0", optional = true }
json-patch = { version = "4.1", optional = true }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
# A parser slices constantly; blanket-denying it would push the code into
# contortions that hide bounds reasoning rather than expose it. Warn, and
# justify each survivor.
indexing_slicing = "warn"
