[package]
name = "lightstreamer-rs"
version = "1.0.0-alpha.1"
edition = "2024"
rust-version = "1.85"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "A Rust client for the Lightstreamer TLCP protocol, for real-time data streaming."
license = "MIT"
repository = "https://github.com/joaquinbejar/lightstreamer-rs"
documentation = "https://docs.rs/lightstreamer-rs"
homepage = "https://github.com/joaquinbejar/lightstreamer-rs"
readme = "README.md"
keywords = ["lightstreamer", "tlcp", "streaming", "realtime", "websocket"]
categories = ["network-programming", "api-bindings"]
# `docs/` ships with the crate on purpose: `docs/spec/` and `docs/adr/` are the
# citation trail behind the MIT relicensing (ADR-0001), and the published
# artifact should carry its own provenance evidence rather than point at a
# repository that may move.
# `.git/info/exclude` keeps these out of git, but `cargo package` does not read
# it, so they have to be named here too or they ship to crates.io.
exclude = ["/rules", "/.claude", "/.agents", "/.codex", "/.github"]

[features]
default = []
# RFC 6902 JSON Patch support for `^P` diff-encoded field values. Off by
# default because it pulls in a JSON stack; see ADR-0004 -- the algorithm is
# advertised to the server via `LS_supported_diffs` only when compiled in.
json-patch = ["dep:serde_json", "dep:json-patch"]

[dependencies]
thiserror = "2.0"
tokio = { version = "1.53", features = ["rt", "sync", "time", "macros", "net", "io-util"] }
tokio-tungstenite = { version = "0.30", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing = "0.1"
serde_json = { version = "1.0", optional = true }
json-patch = { version = "4.2", optional = true }

[dev-dependencies]
tokio = { version = "1.53", features = ["rt-multi-thread", "macros", "test-util"] }
# Only the IG example needs an HTTP client: IG authenticates over REST and
# hands back the tokens its Lightstreamer endpoint expects. Dev-dependencies
# do not reach anyone who depends on this crate.
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
# A parser slices constantly; blanket-denying it would push the code into
# contortions that hide bounds reasoning rather than expose it. Warn, and
# justify each survivor.
indexing_slicing = "warn"
